--- a/index.html
+++ b/index.html
@@ -1,71 +1,80 @@
-
-        #  *==%*-:      %@=*@%.    ==     :--+@-   :==+@- :@#+#@.:@=-@@    =++%#
-       +.@    #:        ++   .@-  =.@   =.    :  --    .   @   .  %:  @   @*             .
-      =--@:   %:        *=    #* =+-** .@    .::.@    :::  @%%*.  @=+=     =%@@-
-   . +.   @   @.        #-    @ --   @. @+    @ .@+    @  .%      @. %*   +    @.
-    +=    #@. @.       -@@*++- :*    -@..%@*=-#  .%@*==# .+%--:. :@:  +@-:%@=-=.
-   =#        .@              ..@                                 +%- :
-            .*%*.               .
-                                                    .+%#
-                      @=.-%@:  @: #@.     #=.@*  -.  .@  %-   .@
-                      @.   :@  @   @     + @ -% .%@  #:  +#*   #
-     .                @.    @. @=@=     =*++% @ + @. #   * -@ .=
-                      @    :+  @. #%   -:   @-#*  .@#   :+  .@:.
-                    :=#%*+-   -*-  :@++#    :%+.   =   .++.   +
-                                     -@
-
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@.        ..:::.-=+**=::.:=*+-:-:::::::::-::::::::
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@= -..  .::..     .
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@* :    .-=-----:     .-. .
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*  .::-. .-----:::::..:-:::..:::.......::.
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@% *++=+=++=+++++==-::-----:....:::::..
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ ::            .   :-::.   :==----:-::
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%=. :::-::        .    -++-:-:+#%@#*:
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-       .-=*@@@@@@@@@@@@@@@@=-*@.
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+..#@@@@@@@@@@@@@@@@@@@%=+:..
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@  *-
-@@@@@@@@@@@@@@@@@@@#%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@::+=.=.
-@@@@@@@@@@@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@   -@   .
-@@@@@@@@@@@@@@@@%**%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+ :- : .
-@@@@@@@@@@@@@@@@#*%@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@% . .    :.=
-@@@@@@@@@@@@@@@@@@@%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@% :. :   +-   .
-@@@@@@@@@@@@@@@@@@%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=    .- +   :-   +
-@@@@@@@@@@@@@@@@@@@@@@@-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@#   -. :   =.  -:-
-@@@@@@@@@@@@@@@%#@.=   =@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:   -. : +   +.=  :
-@@@@@@@@@@@@@@@%%+.-##+:@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@. -   -:  =:=--.# *
-@@@@@@@@@@@+%@@@@@:   -.#@:@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@. : =.  +.=:-.* = :
-@@@@@@@@@=@%@@@@@@@#  .-#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@   -.:.-  -. =.# -.
-@@@@@@@@@@@@@@@@@@@@@@+-+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@  .-=-:..  * +.*:...
-@@@@@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%  : .-.- + ..+:-:-=
-@@@@@@@@..@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@.  - ::- :--=:-:=:
-@@@@@@@%:@%*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@.@@@@   ::.=+ @ +.*:   :
-@@@@@@@#===@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%@@: -=@@#. ::.+  .+.+: :.=
-@@@@@@@@   =@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-@@%     +@@+.. : .=* = +.-
-@@@@@@@.+%@**#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=+#@%    +@@#@@    +.-.-:* =
-@@@@@@@*@*%%.. -@@@@@@@@@@@@@@@@-**=#@#@=+@@@@@@@@@@@@@@: :#    .@@.+*@@   * =:=.# @
-@@@@@@@%@@*@@@@@@+-*@@@@@@@+:=-: -%@@%-==--%@@@@@@@@@@@.        =. :=@@@...-=:=-:*
-@@@@@@@@#@@@@@@-*.@ @@@   +--*@@.** *@+-*=+*+@@@@@@@@@-            -= @@=:*.* %:
-@@@@@@@.::-.    -+==*%:  *++%=%-:@=- +@@--.-:=%@@@@@@                :#. =.++ -: :=
-@@@##@+  :+**+++. --+:@. *@@%==**=.%  -@@-=.:+=*@@%                     +. %= +% =#
---= +##.@@+. =%-   .+ .% +=-==@#=@+=   .@@+=-::.-@     -            -=.=#:=+:+%-++.*
--.*%-**++@@+=#*    .@* *# ==+-@@ @=  .=  @%*=-**==+    :.:.      *= *#.+-.*#-#:.%*
-*=.+:+*# *@@@@@@+    %. -*  ..::@%@--:+   ##@-:..::.*        =-.#=:*=.%*+*-=%*::##:
-:-:--=+*= @%@@@@@=   +.: #+  :# #@ :  -.   +.=..=+*.=%    * -+ ==.+#:-=:%- =%*  .=.
-+*...=+*#  .%@@@@+    :+ .+-    .   .:-=+%=-= ::.-*=*=+-  .+--=.:..=%:-#=..*+: .*%=.
-%=--+=+%#     -@@@++--#:  .#   .=#+*##-:#= +=+=--- *%:+-* ..-+:#%..=.:+= .-%#. :+%%=
--=+#+:*+*=     :*-      .=+%@=@+== :.=*@=%#==++=+::+*++=+#..:--.-*: :%*- -%@*:. -+%=
-*=*-=-+*@%      .:::-***#@@**===++=-**=--#-:-==--=:-=..=*%%  : :++:-++: :=+%+:  :==-
-=@==%-#-*%:**#@**+@%%#**-*-=++-#-:++++*:-==+=-=:++==@@@%-    =-..+@*-.  :+*-..-%%+..
-+*++=:+++@%##%*=***==+-##=-:+-+++**@+==+*++-=+*@@@@# .-=--+**=-*##-...-+@#=-=#@%=.=*
-                                                             .
-                       .
-                                                                           .
-     : . #     -::             *    =       .   : .        -              :
-..=.-=.:+.+   =.+-. :   .::.= - =: =: -:.* :   .-..*:   :.-: : = :.:-.=:.:..::= :..
-  . . .  .   .     :    : -:    :.. .. .. . .      -    : . - +  ..  . . . :    :: :
-               .                                            :.
-                          =   . .      =.    -             :
-                .-:.-+ ..=   # #--    =  =: :=-..-.  :::#=--.:# .-=:.
-               .+-.+ :+-*.  : * -:.  =  +..+ ----.   =.=  -.=- *:.--
-                                      ::
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Daggers Drawn Collective</title
+  </head>
+  <body>
+        #  *==%*-:      %@=*@%.    ==     :--+@-   :==+@- :@#+#@.:@=-@@    =++%#    </br>
+       +.@    #:        ++   .@-  =.@   =.    :  --    .   @   .  %:  @   @*        </br>
+      =--@:   %:        *=    #* =+-** .@    .::.@    :::  @%%*.  @=+=     =%@@-    </br>
+   . +.   @   @.        #-    @ --   @. @+    @ .@+    @  .%      @. %*   +    @    </br>
+    +=    #@. @.       -@@*++- :*    -@..%@*=-#  .%@*==# .+%--:. :@:  +@-:%@=-=.    </br>
+   =#        .@              ..@                                 +%- :              </br>
+        .*%*.               .                                                       </br>
+                                                    .+%#                            </br>
+                      @=.-%@:  @: #@.     #=.@*  -.  .@  %-   .@                    </br>
+                      @.   :@  @   @     + @ -% .%@  #:  +#*   #                    </br>
+     .                @.    @. @=@=     =*++% @ + @. #   * -@ .=                    </br>
+                      @    :+  @. #%   -:   @-#*  .@#   :+  .@:.                    </br>
+                    :=#%*+-   -*-  :@++#    :%+.   =   .++.   +                     </br>
+                                     -@                                             </br>
+                                                                                    </br>
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@.        ..:::.-=+**=::.:=*+-:-:::::::::-::::::::</br>
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@= -..  .::..     .                              </br>
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@* :    .-=-----:     .-. .                     </br>
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*  .::-. .-----:::::..:-:::..:::.......::.    </br>
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@% *++=+=++=+++++==-::-----:....:::::..       </br>
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ ::            .   :-::.   :==----:-::     </br>
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:                                         </br>
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%=. :::-::        .    -++-:-:+#%@#*:   </br>
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-       .-=*@@@@@@@@@@@@@@@@=-*@.  </br>
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+..#@@@@@@@@@@@@@@@@@@@%=+:..  </br>
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@  *-     </br>
+@@@@@@@@@@@@@@@@@@@#%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@::+=.=.   </br>
+@@@@@@@@@@@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@   -@   .   </br>
+@@@@@@@@@@@@@@@@%**%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+ :- : .      </br>
+@@@@@@@@@@@@@@@@#*%@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@% . .    :.=    </br>
+@@@@@@@@@@@@@@@@@@@%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@% :. :   +-   .  </br>
+@@@@@@@@@@@@@@@@@@%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=    .- +   :-   +</br>
+@@@@@@@@@@@@@@@@@@@@@@@-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@#   -. :   =.  -:- </br>
+@@@@@@@@@@@@@@@%#@.=   =@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:   -. : +   +.=  :</br>
+@@@@@@@@@@@@@@@%%+.-##+:@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@. -   -:  =:=--.# *</br>
+@@@@@@@@@@@+%@@@@@:   -.#@:@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@. : =.  +.=:-.* = :</br>
+@@@@@@@@@=@%@@@@@@@#  .-#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@   -.:.-  -. =.# -. </br>
+@@@@@@@@@@@@@@@@@@@@@@+-+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@  .-=-:..  * +.*:...</br>
+@@@@@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%  : .-.- + ..+:-:-= </br>
+@@@@@@@@..@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@.  - ::- :--=:-:=:  </br>
+@@@@@@@%:@%*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@.@@@@   ::.=+ @ +.*:   :</br>
+@@@@@@@#===@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%@@: -=@@#. ::.+  .+.+: :.=</br>
+@@@@@@@@   =@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-@@%     +@@+.. : .=* = +.-</br>
+@@@@@@@.+%@**#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=+#@%    +@@#@@    +.-.-:* =</br>
+@@@@@@@*@*%%.. -@@@@@@@@@@@@@@@@-**=#@#@=+@@@@@@@@@@@@@@: :#    .@@.+*@@   * =:=.# @</br>
+@@@@@@@%@@*@@@@@@+-*@@@@@@@+:=-: -%@@%-==--%@@@@@@@@@@@.        =. :=@@@...-=:=-:*  </br>
+@@@@@@@@#@@@@@@-*.@ @@@   +--*@@.** *@+-*=+*+@@@@@@@@@-            -= @@=:*.* %:    </br>
+@@@@@@@.::-.    -+==*%:  *++%=%-:@=- +@@--.-:=%@@@@@@                :#. =.++ -: := </br>
+@@@##@+  :+**+++. --+:@. *@@%==**=.%  -@@-=.:+=*@@%                     +. %= +% =# </br>
+--= +##.@@+. =%-   .+ .% +=-==@#=@+=   .@@+=-::.-@     -            -=.=#:=+:+%-++.*</br>
+-.*%-**++@@+=#*    .@* *# ==+-@@ @=  .=  @%*=-**==+    :.:.      *= *#.+-.*#-#:.%*  </br>
+*=.+:+*# *@@@@@@+    %. -*  ..::@%@--:+   ##@-:..::.*        =-.#=:*=.%*+*-=%*::##: </br>
+:-:--=+*= @%@@@@@=   +.: #+  :# #@ :  -.   +.=..=+*.=%    * -+ ==.+#:-=:%- =%*  .=. </br>
++*...=+*#  .%@@@@+    :+ .+-    .   .:-=+%=-= ::.-*=*=+-  .+--=.:..=%:-#=..*+: .*%=.</br>
+%=--+=+%#     -@@@++--#:  .#   .=#+*##-:#= +=+=--- *%:+-* ..-+:#%..=.:+= .-%#. :+%%=</br>
+-=+#+:*+*=     :*-      .=+%@=@+== :.=*@=%#==++=+::+*++=+#..:--.-*: :%*- -%@*:. -+%=</br>
+*=*-=-+*@%      .:::-***#@@**===++=-**=--#-:-==--=:-=..=*%%  : :++:-++: :=+%+:  :==-</br>
+=@==%-#-*%:**#@**+@%%#**-*-=++-#-:++++*:-==+=-=:++==@@@%-    =-..+@*-.  :+*-..-%%+..</br>
++*++=:+++@%##%*=***==+-##=-:+-+++**@+==+*++-=+*@@@@# .-=--+**=-*##-...-+@#=-=#@%=.=*</br>
+                                                             .                      </br>
+                       .                                                            </br>
+                                                                           .        </br>
+     : . #     -::             *    =       .   : .        -              :         </br>
+..=.-=.:+.+   =.+-. :   .::.= - =: =: -:.* :   .-..*:   :.-: : = :.:-.=:.:..::= :.. </br>
+  . . .  .   .     :    : -:    :.. .. .. . .      -    : . - +  ..  . . . :    :: :</br>
+               .                                            :.                      </br>
+                          =   . .      =.    -             :                        </br>
+                .-:.-+ ..=   # #--    =  =: :=-..-.  :::#=--.:# .-=:.               </br>
+               .+-.+ :+-*.  : * -:.  =  +..+ ----.   =.=  -.=- *:.--                </br>
+                                      ::                                            </br>
+  </body>
+</html>
