--- a/index.html
+++ b/index.html
@@ -3,78 +3,67 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Daggers Drawn Collective</title
+    <title>Daggers Drawn Collective</title>
+    <link href="assets/css/styles.css" rel="stylesheet" />
   </head>
-  <body>
-        #  *==%*-:      %@=*@%.    ==     :--+@-   :==+@- :@#+#@.:@=-@@    =++%#    </br>
-       +.@    #:        ++   .@-  =.@   =.    :  --    .   @   .  %:  @   @*        </br>
-      =--@:   %:        *=    #* =+-** .@    .::.@    :::  @%%*.  @=+=     =%@@-    </br>
-   . +.   @   @.        #-    @ --   @. @+    @ .@+    @  .%      @. %*   +    @    </br>
-    +=    #@. @.       -@@*++- :*    -@..%@*=-#  .%@*==# .+%--:. :@:  +@-:%@=-=.    </br>
-   =#        .@              ..@                                 +%- :              </br>
-        .*%*.               .                                                       </br>
-                                                    .+%#                            </br>
-                      @=.-%@:  @: #@.     #=.@*  -.  .@  %-   .@                    </br>
-                      @.   :@  @   @     + @ -% .%@  #:  +#*   #                    </br>
-     .                @.    @. @=@=     =*++% @ + @. #   * -@ .=                    </br>
-                      @    :+  @. #%   -:   @-#*  .@#   :+  .@:.                    </br>
-                    :=#%*+-   -*-  :@++#    :%+.   =   .++.   +                     </br>
-                                     -@                                             </br>
-                                                                                    </br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@.        ..:::.-=+**=::.:=*+-:-:::::::::-::::::::</br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@= -..  .::..     .                              </br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@* :    .-=-----:     .-. .                     </br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*  .::-. .-----:::::..:-:::..:::.......::.    </br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@% *++=+=++=+++++==-::-----:....:::::..       </br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ ::            .   :-::.   :==----:-::     </br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:                                         </br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%=. :::-::        .    -++-:-:+#%@#*:   </br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-       .-=*@@@@@@@@@@@@@@@@=-*@.  </br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+..#@@@@@@@@@@@@@@@@@@@%=+:..  </br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@  *-     </br>
-@@@@@@@@@@@@@@@@@@@#%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@::+=.=.   </br>
-@@@@@@@@@@@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@   -@   .   </br>
-@@@@@@@@@@@@@@@@%**%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+ :- : .      </br>
-@@@@@@@@@@@@@@@@#*%@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@% . .    :.=    </br>
-@@@@@@@@@@@@@@@@@@@%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@% :. :   +-   .  </br>
-@@@@@@@@@@@@@@@@@@%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=    .- +   :-   +</br>
-@@@@@@@@@@@@@@@@@@@@@@@-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@#   -. :   =.  -:- </br>
-@@@@@@@@@@@@@@@%#@.=   =@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:   -. : +   +.=  :</br>
-@@@@@@@@@@@@@@@%%+.-##+:@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@. -   -:  =:=--.# *</br>
-@@@@@@@@@@@+%@@@@@:   -.#@:@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@. : =.  +.=:-.* = :</br>
-@@@@@@@@@=@%@@@@@@@#  .-#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@   -.:.-  -. =.# -. </br>
-@@@@@@@@@@@@@@@@@@@@@@+-+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@  .-=-:..  * +.*:...</br>
-@@@@@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%  : .-.- + ..+:-:-= </br>
-@@@@@@@@..@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@.  - ::- :--=:-:=:  </br>
-@@@@@@@%:@%*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@.@@@@   ::.=+ @ +.*:   :</br>
-@@@@@@@#===@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%@@: -=@@#. ::.+  .+.+: :.=</br>
-@@@@@@@@   =@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-@@%     +@@+.. : .=* = +.-</br>
-@@@@@@@.+%@**#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=+#@%    +@@#@@    +.-.-:* =</br>
-@@@@@@@*@*%%.. -@@@@@@@@@@@@@@@@-**=#@#@=+@@@@@@@@@@@@@@: :#    .@@.+*@@   * =:=.# @</br>
-@@@@@@@%@@*@@@@@@+-*@@@@@@@+:=-: -%@@%-==--%@@@@@@@@@@@.        =. :=@@@...-=:=-:*  </br>
-@@@@@@@@#@@@@@@-*.@ @@@   +--*@@.** *@+-*=+*+@@@@@@@@@-            -= @@=:*.* %:    </br>
-@@@@@@@.::-.    -+==*%:  *++%=%-:@=- +@@--.-:=%@@@@@@                :#. =.++ -: := </br>
-@@@##@+  :+**+++. --+:@. *@@%==**=.%  -@@-=.:+=*@@%                     +. %= +% =# </br>
---= +##.@@+. =%-   .+ .% +=-==@#=@+=   .@@+=-::.-@     -            -=.=#:=+:+%-++.*</br>
--.*%-**++@@+=#*    .@* *# ==+-@@ @=  .=  @%*=-**==+    :.:.      *= *#.+-.*#-#:.%*  </br>
-*=.+:+*# *@@@@@@+    %. -*  ..::@%@--:+   ##@-:..::.*        =-.#=:*=.%*+*-=%*::##: </br>
-:-:--=+*= @%@@@@@=   +.: #+  :# #@ :  -.   +.=..=+*.=%    * -+ ==.+#:-=:%- =%*  .=. </br>
-+*...=+*#  .%@@@@+    :+ .+-    .   .:-=+%=-= ::.-*=*=+-  .+--=.:..=%:-#=..*+: .*%=.</br>
-%=--+=+%#     -@@@++--#:  .#   .=#+*##-:#= +=+=--- *%:+-* ..-+:#%..=.:+= .-%#. :+%%=</br>
--=+#+:*+*=     :*-      .=+%@=@+== :.=*@=%#==++=+::+*++=+#..:--.-*: :%*- -%@*:. -+%=</br>
-*=*-=-+*@%      .:::-***#@@**===++=-**=--#-:-==--=:-=..=*%%  : :++:-++: :=+%+:  :==-</br>
-=@==%-#-*%:**#@**+@%%#**-*-=++-#-:++++*:-==+=-=:++==@@@%-    =-..+@*-.  :+*-..-%%+..</br>
-+*++=:+++@%##%*=***==+-##=-:+-+++**@+==+*++-=+*@@@@# .-=--+**=-*##-...-+@#=-=#@%=.=*</br>
-                                                             .                      </br>
-                       .                                                            </br>
-                                                                           .        </br>
-     : . #     -::             *    =       .   : .        -              :         </br>
-..=.-=.:+.+   =.+-. :   .::.= - =: =: -:.* :   .-..*:   :.-: : = :.:-.=:.:..::= :.. </br>
-  . . .  .   .     :    : -:    :.. .. .. . .      -    : . - +  ..  . . . :    :: :</br>
-               .                                            :.                      </br>
-                          =   . .      =.    -             :                        </br>
-                .-:.-+ ..=   # #--    =  =: :=-..-.  :::#=--.:# .-=:.               </br>
-               .+-.+ :+-*.  : * -:.  =  +..+ ----.   =.=  -.=- *:.--                </br>
-                                      ::                                            </br>
+  <body id="home">
+    <header>
+      <pre><a href="./monkeywrench.html">
+
+            #  *==%*-:      %@=*@%.    ==     :--+@-   :==+@- :@#+#@.:@=-@@    =++%#
+           +.@    #:        ++   .@-  =.@   =.    :  --    .   @   .  %:  @   @*
+          =--@:   %:        *=    #* =+-** .@    .::.@    :::  @%%*.  @=+=     =%@@-
+       . +.   @   @.        #-    @ --   @. @+    @ .@+    @  .%      @. %*   +    @
+        +=    #@. @.       -@@*++- :*    -@..%@*=-#  .%@*==# .+%--:. :@:  +@-:%@=-=.
+       =#        .@              ..@                                 +%- :
+                .*%*.               .</a></pre>
+    </header>
+    <main>
+      <pre><a href="./monkeywrench.html">    @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@% *++=+=++=+++++==-::-----:....:::::..
+    @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ ::     ::-:   .   :-::.   :==----:-::
+    @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-       .-=*@@@@@@@@@@@@@@@@=-*@.
+    @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+..#@@@@@@@@@@@@@@@@@@@%=+:..
+    @@@@@@@@@@@@@@@@@@@#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@::+=.=.
+    @@@@@@@@@@@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@   -@   .
+    @@@@@@@@@@@@@@@@%**%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+ :- : .
+    @@@@@@@@@@@@@@@@#*%@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@% . .    :.=
+    @@@@@@@@@@@@@@@@@@@@@@@-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@#   -. :   =.  -:-
+    @@@@@@@@@@@@@@@%#@.=   =@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:   -. : +   +.=  :
+    @@@@@@@@@@@@@@@%%+.-##+:@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@. -   -:  =:=--.# *
+    @@@@@@@@@@@+%@@@@@:   -.#@:@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@. : =.  +.=:-.* = :
+    @@@@@@@@@=@%@@@@@@@#  .-#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@   -.:.-  -. =.# -.
+    @@@@@@@@@@@@@@@@@@@@@@+-+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@  .-=-:..  * +.*:...
+    @@@@@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%  : .-.- + ..+:-:-=
+    @@@@@@@@..@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@.  - ::- :--=:-:=:
+    @@@@@@@%:@%*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@.@@@@   ::.=+ @ +.*:   :
+    @@@@@@@#===@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%@@: -=@@#. ::.+  .+.+: :.=
+    @@@@@@@@   =@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-@@%     +@@+.. : .=* = +.-
+    @@@@@@@.+%@**#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=+#@%    +@@#@@    +.-.-:* =
+    @@@@@@@*@*%%.. -@@@@@@@@@@@@@@@@-**=#@#@=+@@@@@@@@@@@@@@: :#    .@@.+*@@   * =:=.# @
+    @@@@@@@%@@*@@@@@@+-*@@@@@@@+:=-: -%@@%-==--%@@@@@@@@@@@.        =. :=@@@...-=:=-:*
+    @@@@@@@@#@@@@@@-*.@ @@@   +--*@@.** *@+-*=+*+@@@@@@@@@-            -= @@=:*.* %:
+    @@@@@@@.::-.    -+==*%:  *++%=%-:@=- +@@--.-:=%@@@@@@                :#. =.++ -: :=
+    @@@##@+  :+**+++. --+:@. *@@%==**=.%  -@@-=.:+=*@@%                     +. %= +% =#
+    --= +##.@@+. =%-   .+ .% +=-==@#=@+=   .@@+=-::.-@     -            -=.=#:=+:+%-++.*
+    -.*%-**++@@+=#*    .@* *# ==+-@@ @=  .=  @%*=-**==+    :.:.      *= *#.+-.*#-#:.%*
+    *=.+:+*# *@@@@@@+    %. -*  ..::@%@--:+   ##@-:..::.*        =-.#=:*=.%*+*-=%*::##:
+    :-:--=+*= @%@@@@@=   +.: #+  :# #@ :  -.   +.=..=+*.=%    * -+ ==.+#:-=:%- =%*  .=.
+    +*...=+*#  .%@@@@+    :+ .+-    .   .:-=+%=-= ::.-*=*=+-  .+--=.:..=%:-#=..*+: .*%=.
+    %=--+=+%#     -@@@++--#:  .#   .=#+*##-:#= +=+=--- *%:+-* ..-+:#%..=.:+= .-%#. :+%%=
+    -=+#+:*+*=     :*-      .=+%@=@+== :.=*@=%#==++=+::+*++=+#..:--.-*: :%*- -%@*:. -+%=
+    *=*-=-+*@%      .:::-***#@@**===++=-**=--#-:-==--=:-=..=*%%  : :++:-++: :=+%+:  :==-
+    =@==%-#-*%:**#@**+@%%#**-*-=++-#-:++++*:-==+=-=:++==@@@%-    =-..+@*-.  :+*-..-%%+..
+    +*++=:+++@%##%*=***==+-##=-:+-+++**@+==+*++-=+*@@@@# .-=--+**=-*##-...-+@#=-=#@%=.=*</a></pre>
+    </main>
+    <footer>
+      <pre><a href="./monkeywrench.html">                                                        .+%#
+                          @=.-%@:  @: #@.     #=.@*  -.  .@  %-   .@
+                          @.   :@  @   @     + @ -% .%@  #:  +#*   #
+         .                @.    @. @=@=     =*++% @ + @. #   * -@ .=
+                          @    :+  @. #%   -:   @-#*  .@#   :+  .@:.
+                        :=#%*+-   -*-  :@++#    :%+.   =   .++.   +
+                                         -@
+      </a></pre>
+    </footer>
   </body>
 </html>
